--- a/psikoloji.html
+++ b/psikoloji.html
@@ -9,7 +9,6 @@
         body { font-family: 'Plus Jakarta Sans', sans-serif; background: #0f0c11; color: #fff; overflow-x: hidden; }
         nav { position: fixed; top: 0; width: 100%; padding: 35px 6%; z-index: 1000; border-bottom: 1px solid rgba(255,255,255,0.05); background: rgba(15, 12, 17, 0.8); backdrop-filter: blur(10px); }
         .logo { font-family: 'Playfair Display', serif; font-size: 1.8rem; font-weight: 900; text-decoration: none; color: #fff; }
-        
         .header { height: 75vh; display: flex; align-items: center; padding: 0 8%; border-bottom: 1px solid rgba(255,255,255,0.1); }
         .header h1 { font-family: 'Playfair Display'; font-size: 10vw; line-height: 0.9; }
 
@@ -29,7 +28,7 @@
         .faq-question { padding: 30px 0; width: 100%; text-align: left; background: none; border: none; font-family: 'Plus Jakarta Sans'; font-weight: 800; font-size: 1.1rem; text-transform: uppercase; cursor: pointer; display: flex; justify-content: space-between; align-items: center; transition: 0.3s; }
         .faq-answer { display: grid; grid-template-rows: 0fr; transition: grid-template-rows 0.5s cubic-bezier(0.4, 0, 0.2, 1); overflow: hidden; }
         .faq-item.active .faq-answer { grid-template-rows: 1fr; }
-        .faq-answer-content { min-height: 0; padding-bottom: 0; opacity: 0; transition: 0.5s; font-size: 1rem; line-height: 1.7; }
+        .faq-answer-content { min-height: 0; opacity: 0; transition: 0.5s; font-size: 1rem; line-height: 1.7; }
         .faq-item.active .faq-answer-content { opacity: 0.7; padding-bottom: 30px; }
     </style>
 </head>
@@ -54,12 +53,12 @@
                 <div class="faq-answer"><div class="faq-answer-content">Duygusal yeme genellikle bilinçaltındaki şemalarla ilişkilidir. Profesyonel destek, bu atakların altındaki asıl "açlığı" anlamanıza ve kalıcı bir özgürlük kazanmanıza yardımcı olur.</div></div>
             </div>
             <div class="faq-item">
-                <button class="faq-question">Gizlilik süreci nasıl sağlanıyor? <span>+</span></button>
-                <div class="faq-answer"><div class="faq-answer-content">Tüm seanslar tam gizlilik ilkesine ve mesleki etik kurallara bağlıdır. Bilgileriniz sizin izniniz olmadan asla üçüncü şahıslarla paylaşılmaz.</div></div>
+                <button class="faq-question">Seanslar online mı yoksa yüz yüze mi yapılıyor? <span>+</span></button>
+                <div class="faq-answer"><div class="faq-answer-content">Her iki seçenek de mevcuttur. Bilimsel araştırmalar online terapinin yüz yüze terapi kadar etkili olduğunu göstermektedir.</div></div>
             </div>
             <div class="faq-item">
-                <button class="faq-question">İlk seans nasıl geçer? <span>+</span></button>
-                <div class="faq-answer"><div class="faq-answer-content">İlk seans bir değerlendirme sürecidir. Sizi buraya getiren nedenleri konuşur, beklentilerinizi anlar ve nasıl bir rota izleyeceğimizi belirleriz.</div></div>
+                <button class="faq-question">Gizlilik süreci nasıl sağlanıyor? <span>+</span></button>
+                <div class="faq-answer"><div class="faq-answer-content">Tüm seanslar tam gizlilik ilkesine ve mesleki etik kurallara bağlıdır. Bilgileriniz sizin izniniz olmadan asla üçüncü şahıslarla paylaşılmaz.</div></div>
             </div>
         </div>
         <div class="form-area">
