--- a/beslenme.html
+++ b/beslenme.html
@@ -9,7 +9,6 @@
         body { font-family: 'Plus Jakarta Sans', sans-serif; background: #0d1a12; color: #fff; overflow-x: hidden; }
         nav { position: fixed; top: 0; width: 100%; padding: 35px 6%; z-index: 1000; border-bottom: 1px solid rgba(255,255,255,0.05); background: rgba(13, 26, 18, 0.8); backdrop-filter: blur(10px); }
         .logo { font-family: 'Playfair Display', serif; font-size: 1.8rem; font-weight: 900; text-decoration: none; color: #fff; }
-        
         .header { height: 75vh; display: flex; align-items: center; padding: 0 8%; border-bottom: 1px solid rgba(255,255,255,0.1); }
         .header h1 { font-family: 'Playfair Display'; font-size: 10vw; line-height: 0.9; }
 
@@ -29,7 +28,7 @@
         .faq-question { padding: 30px 0; width: 100%; text-align: left; background: none; border: none; font-family: 'Plus Jakarta Sans'; font-weight: 800; font-size: 1.1rem; text-transform: uppercase; cursor: pointer; display: flex; justify-content: space-between; align-items: center; transition: 0.3s; }
         .faq-answer { display: grid; grid-template-rows: 0fr; transition: grid-template-rows 0.5s cubic-bezier(0.4, 0, 0.2, 1); overflow: hidden; }
         .faq-item.active .faq-answer { grid-template-rows: 1fr; }
-        .faq-answer-content { min-height: 0; padding-bottom: 0; opacity: 0; transition: 0.5s; font-size: 1rem; line-height: 1.7; }
+        .faq-answer-content { min-height: 0; opacity: 0; transition: 0.5s; font-size: 1rem; line-height: 1.7; }
         .faq-item.active .faq-answer-content { opacity: 0.7; padding-bottom: 30px; }
     </style>
 </head>
@@ -47,15 +46,15 @@
             <h2 style="font-family:'Playfair Display'; font-size:4rem; margin-bottom:40px;">SIKÇA SORULANLAR</h2>
             <div class="faq-item">
                 <button class="faq-question">Diyet listeleri her hafta değişiyor mu? <span>+</span></button>
-                <div class="faq-answer"><div class="faq-answer-content">Metabolizmanın adaptasyonunu önlemek ve motivasyonu yüksek tutmak adına seans sıklığınıza göre programlarımızı güncelliyoruz.</div></div>
+                <div class="faq-answer"><div class="faq-answer-content">Metabolizmanın adaptasyonunu önlemek adına seans sıklığınıza göre programlarımızı düzenli olarak güncelliyoruz.</div></div>
             </div>
             <div class="faq-item">
                 <button class="faq-question">Kan tahlili yaptırmam şart mı? <span>+</span></button>
-                <div class="faq-answer"><div class="faq-answer-content">Evet, bilimsel bir rota çizebilmek için kan tahlili analizi şarttır. Biyokimyasal verileriniz, protokolün en güvenilir pusulasıdır.</div></div>
+                <div class="faq-answer"><div class="faq-answer-content">Evet, bilimsel bir rota çizebilmek için güncel kan tahlili analizi şarttır. Biyokimyasal verileriniz protokolün pusulasıdır.</div></div>
             </div>
             <div class="faq-item">
                 <button class="faq-question">İnsülin direnci varken kilo verebilir miyim? <span>+</span></button>
-                <div class="faq-answer"><div class="faq-answer-content">Kesinlikle. Doğru karbonhidrat yönetimi ve metabolik planlama ile insülin direnci yönetilmesi gereken bir süreçtir, engel değildir.</div></div>
+                <div class="faq-answer"><div class="faq-answer-content">Kesinlikle. Doğru karbonhidrat yönetimi ve metabolik planlama ile insülin direnci bir engel değil, yönetilmesi gereken bir süreçtir.</div></div>
             </div>
             <div class="faq-item">
                 <button class="faq-question">Sürdürülebilirlik nasıl sağlanıyor? <span>+</span></button>
