--- a/index.html
+++ b/index.html
@@ -9,10 +9,25 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Plus Jakarta Sans', sans-serif; background: #000; color: #fff; overflow: hidden; }
 
-        /* Perde Geçiş Efekti */
-        #transition-curtain {
-            position: fixed; top: 0; left: 0; width: 100%; height: 0%;
-            background: #fff; z-index: 10000; transition: height 0.6s cubic-bezier(0.77, 0, 0.175, 1);
+        /* --- ÖZEL GEÇİŞ KATMANLARI --- */
+        #transition-circle {
+            position: fixed; top: 50%; left: 50%; 
+            width: 140px; height: 140px; border-radius: 50%;
+            background: #fff; transform: translate(-50%, -50%) scale(0);
+            z-index: 10001; transition: transform 0.8s cubic-bezier(0.85, 0, 0.15, 1);
+            pointer-events: none;
+        }
+        #transition-left {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: #3b2b45; transform: translateX(-100%);
+            z-index: 10001; transition: transform 0.7s cubic-bezier(0.77, 0, 0.175, 1);
+            pointer-events: none;
+        }
+        #transition-right {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: #0d1a12; transform: translateX(100%);
+            z-index: 10001; transition: transform 0.7s cubic-bezier(0.77, 0, 0.175, 1);
+            pointer-events: none;
         }
 
         nav { position: fixed; top: 0; width: 100%; padding: 35px 6%; z-index: 1000; }
@@ -47,50 +62,50 @@
     </style>
 </head>
 <body>
-    <div id="transition-curtain"></div>
+    <div id="transition-circle"></div>
+    <div id="transition-left"></div>
+    <div id="transition-right"></div>
+
     <nav><a href="index.html" class="logo">ZE</a></nav>
 
-    <a href="hakkimda.html" class="center-seal">
+    <a href="hakkimda.html" id="btn-hakkimda" class="center-seal">
         <strong style="font-size: 0.8rem; letter-spacing: 1px;">ZEYNEP EKE</strong>
         <span style="font-size: 0.4rem; letter-spacing: 1px; margin-top: 5px; font-weight: 800;">HAKKIMDA</span>
     </a>
 
     <main class="portal">
-        <a href="psikoloji.html" class="side psy-side">
+        <a href="psikoloji.html" id="btn-psikoloji" class="side psy-side">
             <h2>MIND</h2>
             <div class="side-content">
                 <h3 style="font-size: 2.5rem; font-family: 'Playfair Display'; color:#fff;">ZİHİN</h3>
-                <p style="letter-spacing: 3px; font-size: 0.6rem; margin-top: 10px; color:#fff;">KEŞFET →</p>
+                <p style="letter-spacing: 3px; font-size: 0.6rem; margin-top: 10px; color:#fff;">GİRİŞ YAP →</p>
             </div>
         </a>
-        <a href="beslenme.html" class="side nut-side">
+        <a href="beslenme.html" id="btn-beslenme" class="side nut-side">
             <h2>BODY</h2>
             <div class="side-content">
                 <h3 style="font-size: 2.5rem; font-family: 'Playfair Display'; color:#fff;">BEDEN</h3>
-                <p style="letter-spacing: 3px; font-size: 0.6rem; margin-top: 10px; color:#fff;">KEŞFET →</p>
+                <p style="letter-spacing: 3px; font-size: 0.6rem; margin-top: 10px; color:#fff;">GİRİŞ YAP →</p>
             </div>
         </a>
     </main>
 
     <script>
-        function resetTransitions() {
-            const curtain = document.getElementById('transition-curtain');
-            if (curtain) curtain.style.height = '0%';
-        }
+        const navTo = (url, type) => {
+            if(type === 'circle') document.getElementById('transition-circle').style.transform = 'translate(-50%, -50%) scale(30)';
+            if(type === 'left') document.getElementById('transition-left').style.transform = 'translateX(0)';
+            if(type === 'right') document.getElementById('transition-right').style.transform = 'translateX(0)';
+            setTimeout(() => { window.location.href = url; }, 750);
+        };
 
-        document.querySelectorAll('a').forEach(link => {
-            link.addEventListener('click', e => {
-                if(link.hostname === window.location.hostname && !link.hash && link.href.includes('.html')) {
-                    e.preventDefault();
-                    document.getElementById('transition-curtain').style.height = '100%';
-                    setTimeout(() => { window.location = link.href; }, 600);
-                }
-            });
-        });
+        document.getElementById('btn-hakkimda').addEventListener('click', e => { e.preventDefault(); navTo('hakkimda.html', 'circle'); });
+        document.getElementById('btn-psikoloji').addEventListener('click', e => { e.preventDefault(); navTo('psikoloji.html', 'left'); });
+        document.getElementById('btn-beslenme').addEventListener('click', e => { e.preventDefault(); navTo('beslenme.html', 'right'); });
 
-        // Geri tuşu fixi (BFCache)
         window.addEventListener('pageshow', (event) => {
-            resetTransitions();
+            document.getElementById('transition-circle').style.transform = 'translate(-50%, -50%) scale(0)';
+            document.getElementById('transition-left').style.transform = 'translateX(-100%)';
+            document.getElementById('transition-right').style.transform = 'translateX(100%)';
         });
     </script>
 </body>
