--- a/iletisim.html
+++ b/iletisim.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>İletişim | Zeynep Eke</title>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;800&family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
+    <style>
+        body { 
+            margin: 0; 
+            background: #000; 
+            font-family: 'Plus Jakarta Sans', sans-serif; 
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        nav { width: 100%; padding: 30px 6%; display: flex; justify-content: space-between; align-items: center; }
+        .logo { font-family: 'Playfair Display', serif; font-size: 1.5rem; text-decoration: none; color: #fff; }
+        
+        .back-link { 
+            color: #fff; 
+            text-decoration: none; 
+            font-size: 0.7rem; 
+            letter-spacing: 1px; 
+            border-bottom: 1px solid rgba(255,255,255,0.3);
+            padding-bottom: 5px;
+        }
+
+        .form-container {
+            width: 100%;
+            max-width: 800px;
+            padding: 40px 20px;
+            display: flex;
+            justify-content: center;
+        }
+
+        /* Responsive Iframe */
+        iframe {
+            max-width: 100%;
+            background: transparent;
+        }
+    </style>
 </head>
 <body>
-    
+    <nav>
+        <a href="index.html" class="logo">ZE</a>
+        <a href="index.html" class="back-link">← GERİ DÖN</a>
+    </nav>
+
+    <div class="form-container">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfVwP8KtIEFtz-ADcqD747LvjHaYPHb-xuHYmEbff7GYtjndQ/viewform?embedded=true" width="640" height="1200" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
+    </div>
 </body>
 </html>
